--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.8",
     "mongoose-slug-generator": "^1.0.4",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "slugger": "^1.0.1"
   }
 }
